允许观战，允许刷新，由前端生成随机用户id

--- a/index.html
+++ b/index.html
@@ -62,12 +62,6 @@
   <use xlink:href="#mark" x="-40" y="-40"/>
 </svg>
 <script>
-  const room = window.location.pathname;
-  const online = room !== '/';
-  let turn = !online;
-  let black = true;
-  let winner = null;
-  let ws;
   const svg = document.getElementById('svg');
   const pieces = [];
   for (let x = 0; x < 15; x++) {
@@ -82,24 +76,24 @@
       piece.setAttribute('fill-opacity', '0');
       piece.setAttributeNS('http://www.w3.org/1999/xlink', 'xlink:href', '#piece');
       piece.addEventListener('mouseenter', () => {
-        if (!turn || piece.getAttribute('fill-opacity') === '1') return;
-        piece.setAttribute('fill', black ? 'url(#black)' : 'url(#white)');
+        if (game.waiting || piece.getAttribute('fill-opacity') === '1') return;
+        piece.setAttribute('fill', game.black ? 'url(#black)' : 'url(#white)');
         piece.setAttribute('fill-opacity', '0.5');
       });
       piece.addEventListener('mouseleave', () => {
-        if (!turn || piece.getAttribute('fill-opacity') === '1') return;
+        if (game.waiting || piece.getAttribute('fill-opacity') === '1') return;
         piece.setAttribute('fill-opacity', '0');
       });
       piece.addEventListener('click', () => {
-        if (!turn || piece.getAttribute('fill-opacity') === '1') return;
-        piece.setAttribute('fill', black ? 'url(#black)' : 'url(#white)');
+        if (game.waiting || piece.getAttribute('fill-opacity') === '1') return;
+        piece.setAttribute('fill', game.black ? 'url(#black)' : 'url(#white)');
         piece.setAttribute('fill-opacity', '1');
-        setMark(_x, _y);
-        if (online) {
-          turn = false;
-          ws.send(`${_x} ${_y}`);
+        dropPiece(_x, _y);
+        if (game.online) {
+          game.waiting = true;
+          ws.send(JSON.stringify({type: 'DropPiece', x: _x, y: _y}));
         } else {
-          black = !black;
+          game.black = !game.black;
         }
       });
       svg.appendChild(piece);
@@ -111,17 +105,17 @@
   mark.setAttribute('height', '2');
   mark.setAttribute('opacity', '0');
   svg.appendChild(mark);
-  const setMark = (x, y) => {
+  const dropPiece = (x, y) => {
     mark.setAttribute('x', (x * 10 - 71).toString());
     mark.setAttribute('y', (y * 10 - 71).toString());
     mark.setAttribute('opacity', '0.7');
-    checkWinner(x, y);
-    if (winner) {
-      turn = false;
-      if (!online) {
-        Message(`游戏结束，${winner === 'black' ? '黑' : '白'}棋胜利！`);
+    game.winner = checkWinner(x, y);
+    if (game.winner) {
+      game.waiting = true;
+      if (game.visiting || !game.online) {
+        Message(`游戏结束，${game.winner === 'black' ? '黑' : '白'}棋胜利！`);
       } else {
-        if ((winner === 'black' && black) || (winner === 'white' && !black)) {
+        if ((game.winner === 'black' && game.black) || (game.winner === 'white' && !game.black)) {
           Message('你赢了！');
         } else {
           Message('你输了，下次加油！');
@@ -132,109 +126,41 @@
 
   const checkWinner = (x, y) => {
     const color = pieces[x][y].getAttribute('fill');
+    const potentialWinner = color === 'url(#black)' ? 'black' : 'white';
+    const list = [4, 3, 2, 1];
     if (x >= 4) {
-      let ok = true;
-      for (const i of [4, 3, 2, 1]) {
-        if (pieces[x - i][y].getAttribute('fill-opacity') !== '1' || pieces[x - i][y].getAttribute('fill') !== color) {
-          ok = false;
-          break;
-        }
+      if (!list.some(i => pieces[x - i][y].getAttribute('fill-opacity') !== '1' || pieces[x - i][y].getAttribute('fill') !== color)) {
+        return potentialWinner;
       }
-      if (ok) {
-        winner = color === 'url(#black)' ? 'black' : 'white';
-        return;
+      if (y >= 4 && !list.some(i => pieces[x - i][y - i].getAttribute('fill-opacity') !== '1' || pieces[x - i][y - i].getAttribute('fill') !== color)) {
+        return potentialWinner;
       }
-      if (y >= 4) {
-        let ok = true;
-        for (const i of [4, 3, 2, 1]) {
-          if (pieces[x - i][y - i].getAttribute('fill-opacity') !== '1' || pieces[x - i][y - i].getAttribute('fill') !== color) {
-            ok = false;
-            break;
-          }
-        }
-        if (ok) {
-          winner = color === 'url(#black)' ? 'black' : 'white';
-          return;
-        }
-      }
-      if (y <= 10) {
-        let ok = true;
-        for (const i of [4, 3, 2, 1]) {
-          if (pieces[x - i][y + i].getAttribute('fill-opacity') !== '1' || pieces[x - i][y + i].getAttribute('fill') !== color) {
-            ok = false;
-            break;
-          }
-        }
-        if (ok) {
-          winner = color === 'url(#black)' ? 'black' : 'white';
-          return;
-        }
+      if (y <= 10 && !list.some(i => pieces[x - i][y + i].getAttribute('fill-opacity') !== '1' || pieces[x - i][y + i].getAttribute('fill') !== color)) {
+        return potentialWinner;
       }
     }
     if (x <= 10) {
-      let ok = true;
-      for (const i of [4, 3, 2, 1]) {
-        if (pieces[x + i][y].getAttribute('fill-opacity') !== '1' || pieces[x + i][y].getAttribute('fill') !== color) {
-          ok = false;
-          break;
-        }
+      if (!list.some(i => pieces[x + i][y].getAttribute('fill-opacity') !== '1' || pieces[x + i][y].getAttribute('fill') !== color)) {
+        return potentialWinner;
       }
-      if (ok) {
-        winner = color === 'url(#black)' ? 'black' : 'white';
-        return;
+      if (y >= 4 && !list.some(i => pieces[x + i][y - i].getAttribute('fill-opacity') !== '1' || pieces[x + i][y - i].getAttribute('fill') !== color)) {
+        return potentialWinner;
       }
-      if (y >= 4) {
-        let ok = true;
-        for (const i of [4, 3, 2, 1]) {
-          if (pieces[x + i][y - i].getAttribute('fill-opacity') !== '1' || pieces[x + i][y - i].getAttribute('fill') !== color) {
-            ok = false;
-            break;
-          }
-        }
-        if (ok) {
-          winner = color === 'url(#black)' ? 'black' : 'white';
-          return;
-        }
-      }
-      if (y <= 10) {
-        let ok = true;
-        for (const i of [4, 3, 2, 1]) {
-          if (pieces[x + i][y + i].getAttribute('fill-opacity') !== '1' || pieces[x + i][y + i].getAttribute('fill') !== color) {
-            ok = false;
-            break;
-          }
-        }
-        if (ok) {
-          winner = color === 'url(#black)' ? 'black' : 'white';
-          return;
-        }
+      if (y <= 10 && !list.some(i => pieces[x + i][y + i].getAttribute('fill-opacity') !== '1' || pieces[x + i][y + i].getAttribute('fill') !== color)) {
+        return potentialWinner;
       }
     }
     if (y >= 4) {
-      let ok = true;
-      for (const i of [4, 3, 2, 1]) {
-        if (pieces[x][y - i].getAttribute('fill-opacity') !== '1' || pieces[x][y - i].getAttribute('fill') !== color) {
-          ok = false;
-          break;
-        }
-      }
-      if (ok) {
-        winner = color === 'url(#black)' ? 'black' : 'white';
-        return;
+      if (!list.some(i => pieces[x][y - i].getAttribute('fill-opacity') !== '1' || pieces[x][y - i].getAttribute('fill') !== color)) {
+         return potentialWinner;
       }
     }
     if (y <= 10) {
-      let ok = true;
-      for (const i of [4, 3, 2, 1]) {
-        if (pieces[x][y + i].getAttribute('fill-opacity') !== '1' || pieces[x][y + i].getAttribute('fill') !== color) {
-          ok = false;
-          break;
-        }
-      }
-      if (ok) {
-        winner = color === 'url(#black)' ? 'black' : 'white';
+       if (!list.some(i => pieces[x][y + i].getAttribute('fill-opacity') !== '1' || pieces[x][y + i].getAttribute('fill') !== color)) {
+         return potentialWinner;
       }
     }
+    return null;
   };
 
   const messageDiv = document.getElementById('message');
@@ -242,31 +168,138 @@
     const div = document.createElement('div');
     div.innerHTML = `<div>${content}</div>`;
     messageDiv.appendChild(div);
-    setTimeout(() => messageDiv.removeChild(div), 2500);
+    setTimeout(() => messageDiv.removeChild(div), 3000);
   };
 
-  if (online) {
-    ws = new WebSocket(`ws://${window.location.host}${room}`);
-    ws.onerror = (_ => Message('房间人满了，换一个房间吧'));
-    ws.onmessage = (ev => {
-      const text = ev.data;
-      if (text === 'black') {
-        turn = true;
-        Message('您执黑棋，请下棋！');
-      } else if (text === 'white') {
-        black = false;
-        Message('您执白棋！');
+  const user = {};
+  const initializeUser = () => {
+    const localUserId = window.localStorage.getItem('user.id');
+    if (!localUserId) {
+      const newUserId = Math.random().toString().substr(2,8);
+      window.localStorage.setItem('user.id', newUserId);
+      user.id = newUserId;
+    } else {
+      user.id = localUserId;
+    }
+    user.name = window.localStorage.getItem('user.name') || '';
+  };
+  initializeUser();
+
+  const game = {};
+  let ws = null;
+  const initializeGame = (room, preserve = false) => {
+    game.room = room;
+    game.online = game.room !== '';
+    if (game.online || !preserve) {
+      for (const row of pieces) {
+          for (const piece of row) {
+            piece.setAttribute('fill-opacity', '0');
+          }
+        }
+    }
+    if (game.online) {
+      game.black = true;
+      game.waiting = true;
+      game.winner = null;
+      if (!ws) {
+        ws = new WebSocket(`ws://${window.location.host}`);
+        ws.onopen = () => {
+          ws.send(JSON.stringify({type: 'EnterRoom', id: user.id, name: user.name, room: game.room}));
+        };
+        ws.onerror = (_ => {
+          ws = null;
+          alert('连接已断开，将转换为单机模式！');
+          setOffline();
+        });
+        ws.onmessage = (ev => {
+          const data = JSON.parse(ev.data);
+          const { type } = data;
+          if (type === 'InitializeRoomState') {
+            game.black = data.black;
+            game.visiting = data.visiting;
+            const droppedPieces = data.pieces;
+            let black = true;
+            for (const [x, y] of droppedPieces) {
+              pieces[x][y].setAttribute('fill', black ? 'url(#black)' : 'url(#white)');
+              pieces[x][y].setAttribute('fill-opacity', '1');
+              black = !black;
+            }
+            if (droppedPieces.length) {
+              dropPiece(...droppedPieces[droppedPieces.length - 1]);
+            }
+            if (!game.winner) {
+              if (!game.visiting && data.ready) {
+                if (game.black === black) {
+                  if (droppedPieces.length) {
+                    if (!game.winner) Message('欢迎回来，该您下棋了！');
+                  } else {
+                    Message('欢迎进入，您执黑棋，下棋后即开局，无法更换黑白和对手。');
+                  }
+                  game.waiting = false;
+                } else {
+                  Message(`欢迎进入，请等待对手下棋。`);
+                }
+              } else if (!droppedPieces.length && !data.ready) {
+                Message(`欢迎进入，等待对手中。`);
+              }
+            }
+          } else if (type === 'AddPlayer') {
+            if (!game.visiting && data.ready && game.black === true) {
+              Message('您执黑棋，下棋后即开局，无法更换黑白和对手。');
+              game.waiting = false;
+            }
+          } else if (type === 'ChangeBlack') {
+            if (window.confirm('对方希望与您交换黑白棋，是否同意？')) {
+              ws.send(JSON.stringify({type: 'AcceptChange'}));
+            } else {
+              ws.send(JSON.stringify({type: 'RejectChange'}));
+            }
+          } else if (type === 'DropPiece') {
+            const { x, y } = data;
+            const piece = pieces[x][y];
+            piece.setAttribute('fill', game.black ? 'url(#white)' : 'url(#black)');
+            piece.setAttribute('fill-opacity', '1');
+            dropPiece(x, y);
+            if (game.visiting) game.black = !game.black;
+            if (!game.visiting && !game.winner) {
+              game.waiting = false;
+              Message('请下棋！');
+            }
+          }
+        });
       } else {
-        const [x, y] = text.split(' ').map(i => Number(i));
-        const piece = pieces[x][y];
-        piece.setAttribute('fill', black ? 'url(#white)' : 'url(#black)');
-        piece.setAttribute('fill-opacity', '1');
-        turn = true;
-        setMark(x, y);
-        if (!winner) Message('请下棋！');
+        ws.send(JSON.stringify({type: 'ChangeRoom', id: user.id, name: user.name, room: game.room}));
       }
-    });
-  }
+    } else {
+      if (!preserve) {
+        game.black = true;
+        game.waiting = false;
+        game.winner = null;
+      } else {
+        if (!game.winner) {
+          game.black = game.black && !game.waiting;
+          game.waiting = false;
+        }
+      }
+      if (ws) {
+        ws.close();
+        ws = null;
+      }
+    }
+  };
+  initializeGame(window.location.pathname.substr(1));
+  window.onpopstate = (event) => {
+    initializeGame(event.target.location.pathname.substr(1), event.state.preserve);
+  };
+  const changeRoom = (room) => {
+    history.pushState(null, null, `/${room}`);
+    initializeGame(room);
+  };
+
+  const setOffline = () => {
+    history.pushState({preserve: true}, null, '/');
+    ws = null;
+  };
 </script>
 </body>
 </html>
