--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%">
 <head>
+  <meta name="viewport" content="width=device-width" initial-scale="1"/>
   <meta charset="UTF-8">
   <title>五子棋</title>
 </head>
