--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" style="height: 100%">
 <head>
-  <meta name="viewport" content="width=device-width" initial-scale="1"/>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="https://fe-1255520126.file.myqcloud.com/gobang/favicon.ico">
   <title>五子棋</title>
 </head>
 <body style="height: 100%; margin: 0; background: bisque">
